--- a/src/scss/06_components/navigation/_sidebar-menu.scss
+++ b/src/scss/06_components/navigation/_sidebar-menu.scss
@@ -223,6 +223,7 @@
   }
 }
 
+// Section navigation special-case
 .sidebar-navigation--section-navigation {
   @include breakpoint(max-width $breakpoint-l) {
     background-color: $color-silver-light;
@@ -231,9 +232,24 @@
 
   .sidebar-navigation__title {
     @include breakpoint(max-width $breakpoint-l) {
-      background-color: $color-silver;
+      @include font('h5');
+      background-color: $color-silver-light;
       border-bottom: 0 none;
+      margin-top: 0;
       padding: $spacing;
+      width: calc(100% - 54px);
+    }
+
+    a {
+      @include breakpoint(max-width $breakpoint-l) {
+        padding-left: 0;
+      }
+
+      &:before {
+        @include breakpoint(max-width $breakpoint-l) {
+          display: none;
+        }
+      }
     }
   }
 
@@ -241,6 +257,50 @@
     @include breakpoint(max-width $breakpoint-l) {
       padding-left: $spacing;
       padding-right: $spacing;
+    }
+  }
+
+  .section-navigation-header {
+    @include breakpoint(max-width $breakpoint-l) {
+      display: flex;
+      @include font('body');
+    }
+
+    .menu__toggle-button {
+      display: none;
+
+      @include breakpoint(max-width $breakpoint-l) {
+        background-color: $color-silver;
+        display: block;
+        min-height: 54px;
+        min-width: 54px;
+      }
+    }
+  }
+
+  .section-navigation-menu-wrapper {
+    @include breakpoint(max-width $breakpoint-l) {
+      display: none;
+    }
+  }
+}
+
+.sidebar-navigation--section-navigation--open {
+  .sidebar-navigation__title {
+    @include breakpoint(max-width $breakpoint-l) {
+      background-color: $color-silver;
+    }
+  }
+
+  .section-navigation-header .menu__toggle-button .hel-icon {
+    @include breakpoint(max-width $breakpoint-l) {
+      transform: rotate(180deg);
+    }
+  }
+
+  .section-navigation-menu-wrapper {
+    @include breakpoint(max-width $breakpoint-l) {
+      display: block;
     }
   }
 }
