--- a/src/scss/06_components/navigation/_sidebar-menu.scss
+++ b/src/scss/06_components/navigation/_sidebar-menu.scss
@@ -132,7 +132,7 @@ $-outline-width: 3px;
     margin-block: $inner-item-spacing;
     padding: $inner-item-spacing $spacing-quarter;
     position: relative;
-    width: 100%;
+    width: calc(100% - 44px);
 
     &:focus {
       outline: $-outline-width solid $color-black;
