UHF-6525: Make section navigation visible if it set for the content

--- a/src/scss/06_components/navigation/_sidebar-menu.scss
+++ b/src/scss/06_components/navigation/_sidebar-menu.scss
@@ -9,6 +9,12 @@ $-outline-width: 3px;
   }
 }
 
+.has-section-nav {
+  .layout-sidebar-first {
+    display: block;
+  }
+}
+
 .sidebar-navigation__title {
   @include font('h4');
   border-bottom: 2px solid $color-black;
