--- a/templates/layout/page.html.twig
+++ b/templates/layout/page.html.twig
@@ -17,6 +17,7 @@
     has_sidebar_first or has_sidebar_second ? 'has-sidebar' : 'no-sidebar',
     has_sidebar_first ? 'has-sidebar--first' : 'no-sidebar-first',
     has_sidebar_second ? 'has-sidebar--second' : 'no-sidebar-second',
+    has_section_nav ? 'has-section-nav' : 'no-section-nav',
   ]
 %}
 
