--- a/templates/block/block--external-menu-block-fallback.html.twig
+++ b/templates/block/block--external-menu-block-fallback.html.twig
@@ -32,6 +32,12 @@
  */
 #}
 
+{% if not header_top_navigation_content %}
+  {% set header_top_navigation_content %}
+    {{ drupal_entity('block', 'external_header_top_navigation')}}
+  {% endset %}
+{% endif %}
+
 {% set block_content %}
   {% block content %}
     {{ content }}
@@ -63,7 +69,7 @@
     modifier_class: 'nav-toggle-dropdown--menu',
     description: 'Navigation menu'|t({}, {'context': 'Mobile navigation menu description for screen readers'})
   } %}
-    {% block content%}
+    {% block content %}
       <div class="mega-and-mobilemenu">
 
         {# Render external mega menu block. #}
@@ -75,9 +81,7 @@
         <div class="mmenu__footer js-mmenu__footer">
 
           {% set inside_cssmenu = true %}
-          {% block header_top_navigation %}
-            {{ drupal_entity('block', 'external_header_top_navigation')}}
-          {% endblock header_top_navigation %}
+          {{ header_top_navigation_content }}
 
           <div class="mmenu__logo">
             {% set link_label %}
