--- a/src/scss/06_components/navigation/_branding-navigation.scss
+++ b/src/scss/06_components/navigation/_branding-navigation.scss
@@ -22,10 +22,17 @@ $-branding-icon-size-desktop: $spacing-double;
     --header-branding-padding: #{$spacing-and-half};
     grid-template-areas:
       '. logo . lang brand search toggle .'
-      'langmenu langmenu langmenu langmenu . . . .'
+      'langmenu langmenu langmenu langmenu langmenu langmenu langmenu langmenu'
       'menu menu menu menu menu menu menu menu';
     grid-template-columns: var(--header-branding-padding) auto 1fr auto auto auto auto var(--header-branding-padding);
     grid-template-rows: var(--branding-height) auto;
+  }
+
+  @include breakpoint($breakpoint-l) {
+    grid-template-areas:
+      '. logo . lang brand search toggle .'
+      'langmenu langmenu langmenu langmenu . . . .'
+      'menu menu menu menu menu menu menu menu';
   }
 
   @include breakpoint($breakpoint-m) {
