--- a/src/scss/06_components/navigation/_sidebar-menu.scss
+++ b/src/scss/06_components/navigation/_sidebar-menu.scss
@@ -198,35 +198,14 @@ $-outline-width: 3px;
     background-color: $color-silver-light;
     display: block;
   }
-
-  .sidebar-navigation__title {
-    @include breakpoint(max-width $breakpoint-l) {
-      @include font('h5');
-      background-color: $color-silver-light;
-      border-bottom: 0 none;
-      margin-top: 0;
-      padding: 0 $spacing;
-      width: calc(100% - 54px);
-    }
-
-    a {
-      @include breakpoint(max-width $breakpoint-l) {
-        margin-bottom: 0;
-        margin-top: 0;
-        padding-left: 0;
-      }
-
-      &:before {
-        @include breakpoint(max-width $breakpoint-l) {
-          display: none;
-        }
-      }
-    }
+  .menu__toggle-button {
+    margin-right: -10px; // Align the button with the first menu toggle button.
   }
 
-  .menu {
+  .menu--level-0 {
     @include breakpoint(max-width $breakpoint-l) {
       padding-left: $spacing;
+      padding-right: $spacing;
     }
   }
 
@@ -239,48 +218,73 @@ $-outline-width: 3px;
   }
 
   .menu__item--children > .menu__link-wrapper {
-    padding-right: 5px; // Align the bit smaller menu-item toggle nicely with the menu toggle.
+    padding-right: 0;
+  }
+}
+
+.section-navigation__title {
+  @include breakpoint(max-width $breakpoint-l) {
+    @include font('h5');
+    background-color: $color-silver-light;
+    border-bottom: 0 none;
+    margin-top: 0;
+    padding: 0 $spacing;
+    width: calc(100% - 54px);
   }
 
-  .section-navigation__header {
+  a {
     @include breakpoint(max-width $breakpoint-l) {
-      @include font('body');
-      display: flex;
+      margin-bottom: 0;
+      margin-top: 0;
+      padding-left: 0;
     }
 
-    .section-navigation__toggle-wrapper {
+    &:before {
       @include breakpoint(max-width $breakpoint-l) {
-        align-items: center;
-        background-color: $color-silver;
-        display: flex;
-      }
-    }
-
-    .menu__toggle-button {
-      display: none;
-
-      @include breakpoint(max-width $breakpoint-l) {
-        background-color: $color-silver;
-        display: block;
-        height: 54px;
-        width: 54px;
-      }
-
-      &:before {
         display: none;
       }
     }
   }
+}
 
-  .section-navigation__menu-wrapper {
+.section-navigation__header {
+  @include breakpoint(max-width $breakpoint-l) {
+    @include font('body');
+    display: flex;
+  }
+
+  .section-navigation__toggle-wrapper {
     @include breakpoint(max-width $breakpoint-l) {
-      display: none;
+      align-items: center;
+      background-color: $color-silver;
+      display: flex;
+    }
+  }
+
+  .menu__toggle-button {
+    display: none;
+
+    @include breakpoint(max-width $breakpoint-l) {
+      background-color: $color-silver;
+      display: block;
+      height: 54px;
+      width: 54px;
     }
 
-    .menu__toggle-button:before {
-      @include breakpoint(max-width $breakpoint-l) {
-        background-color: $color-silver;
-      }
+    &:before {
+      display: none;
+    }
+  }
+}
+
+.section-navigation__menu-wrapper {
+  @include breakpoint(max-width $breakpoint-l) {
+    display: none;
+  }
+
+  .menu__toggle-button:before {
+    @include breakpoint(max-width $breakpoint-l) {
+      background-color: $color-silver;
     }
   }
 }
