--- a/src/scss/06_components/navigation/_sidebar-menu.scss
+++ b/src/scss/06_components/navigation/_sidebar-menu.scss
@@ -237,7 +237,7 @@ $-outline-width: 3px;
     background-color: $color-silver-light;
     border-bottom: 0 none;
     margin-top: 0;
-    padding: 0 $spacing;
+    padding: 0;
     width: calc(100% - 54px);
   }
 
@@ -245,7 +245,8 @@ $-outline-width: 3px;
     @include breakpoint(max-width $breakpoint-l) {
       margin-bottom: 0;
       margin-top: 0;
-      padding-left: 0;
+      padding-left: $spacing;
+      padding-right: $spacing;
     }
 
     &:before {
