--- a/src/scss/06_components/navigation/_local-tasks.scss
+++ b/src/scss/06_components/navigation/_local-tasks.scss
@@ -45,43 +45,22 @@
       background-color: $color-black;
       bottom: 0;
       content: '';
-      height: 0;
+      height: 4px;
       left: 0;
-      margin: 0 auto;
       position: absolute;
       right: 0;
-      transition: all 0.5s cubic-bezier(0.19, 1, 0.22, 1);
-      width: 0;
+      transform: scale(0);
+      transition: transform 0.5s cubic-bezier(0.19, 1, 0.22, 1);
     }
 
-    &.is-active,
-    &:hover {
-      &::after {
-        height: 4px;
-        width: 100%;
-      }
+    &.is-active::after,
+    &:hover::after {
+      transform: scale(1);
     }
 
     &:focus {
-      outline: none;
-      position: relative;
-
-      &::before {
-        box-shadow: 0 0 0 3px $color-black-90;
-        content: '';
-        height: calc(100% - (3px * 2));
-        left: 0;
-        pointer-events: none;
-        position: absolute;
-        top: 0;
-        transform: translateY(calc(3px));
-        width: 100%;
-      }
-
-      &:hover {
-        border-bottom: 0;
-        padding-bottom: $spacing-quarter;
-      }
+      outline: 3px solid $color-black;
+      outline-offset: 2px;
     }
   }
 }
