--- a/templates/module/helfi-news-item/node--news-item.html.twig
+++ b/templates/module/helfi-news-item/node--news-item.html.twig
@@ -10,6 +10,19 @@
 
     {# Created date and modified date #}
     {% if published_at is not empty %}
+      {% if date(published_at) < date('-365days') %}
+        {% set tag_content %}
+          <span>{{ 'Published over a year ago'|t({}, {'context': 'The helper text before the node published timestamp'}) }}</span>
+        {% endset %}
+        {% embed '@hdbt/misc/tag-list.twig'%}
+          {% block content %}
+            {% include '@hdbt/misc/tag.twig' with {
+              tag: tag_content,
+              color: 'alert'
+            }%}
+            {% endblock content %}
+        {% endembed %}
+      {% endif %}
       <div class="content-date">
         {% set html_published_at = published_at|format_date('custom', 'Y-m-d') ~ 'T' ~ published_at|format_date('custom', 'H:i') %}
         <time datetime="{{ html_published_at }}" class="content-date__datetime content-date__datetime--published">
