--- a/src/scss/06_components/navigation/_sidebar-menu.scss
+++ b/src/scss/06_components/navigation/_sidebar-menu.scss
@@ -9,10 +9,8 @@ $-outline-width: 3px;
   }
 }
 
-.has-section-nav {
-  .layout-sidebar-first {
-    display: block;
-  }
+.has-section-nav .layout-sidebar-first {
+  display: block;
 }
 
 .sidebar-navigation__title {
@@ -202,11 +200,15 @@ $-outline-width: 3px;
 }
 
 // Section navigation special-case
+
+$section-navigation-toggle-button-size: 54px;
+
 .sidebar-navigation--section-navigation {
   @include breakpoint(max-width $breakpoint-l) {
     background-color: $color-silver-light;
     display: block;
   }
+
   .menu__toggle-button {
     @include breakpoint(max-width $breakpoint-l) {
       margin-right: -10px; // Align the button with the first menu toggle button.
@@ -238,9 +240,9 @@ $-outline-width: 3px;
     @include font('h5');
     background-color: $color-silver-light;
     border-bottom: 0 none;
+    flex-grow: 1;
     margin-top: 0;
     padding: 0;
-    width: calc(100% - 54px);
   }
 
   a {
@@ -250,11 +252,11 @@ $-outline-width: 3px;
       padding-left: $spacing;
       padding-right: $spacing;
     }
+  }
 
-    &:before {
-      @include breakpoint(max-width $breakpoint-l) {
-        display: none;
-      }
+  a::before {
+    @include breakpoint(max-width $breakpoint-l) {
+      display: none;
     }
   }
 }
@@ -262,6 +264,7 @@ $-outline-width: 3px;
 .section-navigation__header {
   @include breakpoint(max-width $breakpoint-l) {
     @include font('body');
+    align-items: stretch;
     display: flex;
   }
 
@@ -278,17 +281,20 @@ $-outline-width: 3px;
 
     @include breakpoint(max-width $breakpoint-l) {
       background-color: $color-silver;
-      height: 54px;
-      width: 54px;
-
-      :where(html.js) & {
-        display: block;
-      }
+      height: $section-navigation-toggle-button-size;
+      margin-right: 0;
+      width: $section-navigation-toggle-button-size;
     }
 
-    &:before {
+    &::before {
       display: none;
     }
+  }
+}
+
+:where(html.js) .section-navigation__header .menu__toggle-button {
+  @include breakpoint(max-width $breakpoint-l) {
+    display: block;
   }
 }
 
@@ -301,7 +307,7 @@ $-outline-width: 3px;
     }
   }
 
-  .menu__toggle-button:before {
+  .menu__toggle-button::before {
     @include breakpoint(max-width $breakpoint-l) {
       background-color: $color-silver;
     }
