--- a/templates/navigation/menu.html.twig
+++ b/templates/navigation/menu.html.twig
@@ -25,12 +25,11 @@
   We call a macro which calls itself to render the full tree.
   @see https://twig.symfony.com/doc/1.x/tags/macro.html
 #}
-{{ menus.menu_links(items, attributes, 0, allow_collabsible, auto_open) }}
+{{ menus.menu_links(items, attributes, 0, allow_collabsible, auto_open, menu_depth) }}
 
-{% macro menu_links(items, attributes, menu_level, allow_collabsible, auto_open) %}
+{% macro menu_links(items, attributes, menu_level, allow_collabsible, auto_open, menu_depth) %}
   {% import _self as menus %}
-  {% set max_level = 5 %} {# How deep do we allow the navigation menu to traverse? Counting from "instance", "main level", "level 3", "level 4", "level 5"... #}
-
+  {% set max_level = menu_depth %}
   {%
     set menu_classes = [
       'menu',
@@ -116,7 +115,7 @@
           {% endif %}
         </span>
         {% if has_children %}
-          {{ menus.menu_links(item.below, attributes|without('class').setAttribute('id', menu_aria_controls), menu_level + 1, allow_collabsible, auto_open) }}
+          {{ menus.menu_links(item.below, attributes|without('class').setAttribute('id', menu_aria_controls), menu_level + 1, allow_collabsible, auto_open, menu_depth) }}
         {% endif %}
       </li>
     {% endfor %}
