--- a/templates/paragraphs/paragraph--phasing-item.html.twig
+++ b/templates/paragraphs/paragraph--phasing-item.html.twig
@@ -6,15 +6,15 @@
 %}
 
 {% block paragraph %}
-  <div{{ attributes.addClass(classes) }}>
-    <{{ phasing_item_heading_level }} class="phasing__item-title">
+  <li{{ attributes.addClass(classes) }}>
+    <p class="phasing__item-title">
       {{ content.field_title}}
-    </{{ phasing_item_heading_level }}>
+    </p>
     {% if content.field_description|render %}
       <div class="phasing__item-description">
         {{ content.field_description}}
       </div>
     {% endif %}
-  </div>
+  </li>
 {% endblock paragraph %}
 
