--- a/templates/paragraphs/paragraph--phasing.html.twig
+++ b/templates/paragraphs/paragraph--phasing.html.twig
@@ -6,6 +6,7 @@
       component_title_level: phasing_title_level,
       component_description: content.field_description,
       component_content_class: 'phasing',
+      component_content_tag: 'ul',
     }
   %}
     {% block component_content %}
