UHF-7031: Moved chat leijuke styles to hdbt, fixed arrow alignment and changed cookie compliance button to secondary

--- a/templates/misc/eu_cookie_compliance_popup_info.html.twig
+++ b/templates/misc/eu_cookie_compliance_popup_info.html.twig
@@ -55,7 +55,7 @@
 
     <div class="eu-cookie-compliance-all-buttons">
       <div id="popup-buttons" class="eu-cookie-compliance-buttons{% if cookie_categories %} eu-cookie-compliance-has-categories{% endif %}">
-        <button type="button" class="{{ primary_button_class }} hds-button hds-button--primary"><span class="hds-button__label">{{ agree_button }}</span></button>
+        <button type="button" class="{{ primary_button_class }} hds-button hds-button--secondary"><span class="hds-button__label">{{ agree_button }}</span></button>
         {% if secondary_button_label %}
           <button type="button" class="{{ secondary_button_class }}">{{ secondary_button_label }}</button>
         {% endif %}
