--- a/src/scss/06_components/block/__index.scss
+++ b/src/scss/06_components/block/__index.scss
@@ -1,5 +1,6 @@
 @import 'branding-navigation';
 @import 'branding';
+@import 'chat-leijuke';
 @import 'language-switcher';
 @import 'header-language-links';
 @import 'mobile-navigation';
