--- a/src/scss/06_components/block/_chat-leijuke.scss
+++ b/src/scss/06_components/block/_chat-leijuke.scss
@@ -37,6 +37,8 @@
   display: none;
 }
 
+// Disable linter, because the html structure is third party
+// stylelint-disable-next-line selector-id-pattern
 #aca--widget-button {
   opacity: 0;
 }
