Stles for service search list

--- a/src/scss/06_components/paragraphs/_service-list.scss
+++ b/src/scss/06_components/paragraphs/_service-list.scss
@@ -89,4 +89,21 @@
       padding-top: $spacing-quadruple;
     }
   }
+
+  .services-search__results {
+    border-top: 1px solid $color-black-10;
+    display: block;
+    margin-top: $spacing-double;
+    padding-top: $spacing-double;
+    width: 100%;
+
+    @include breakpoint($breakpoint-m) {
+      margin-top: $spacing-quadruple;
+      padding-top: $spacing-quadruple;
+    }
+
+    > .views-row + .views-row {
+      margin-top: $spacing;
+    }
+  }
 }
