--- a/templates/module/helfi_tpr/tpr-service.html.twig
+++ b/templates/module/helfi_tpr/tpr-service.html.twig
@@ -25,11 +25,13 @@
         {{ entity.label }}
       </h3>
       <div class="service__content">
-        <div class="short-desc">
-          {{ content.description }}
-        </div>
-        <div class="channels">
-          {{ content.errand_services }}
+        <div>
+          <div class="short-desc">
+            {{ content.description }}
+          </div>
+          <div class="channels">
+            {{ content.errand_services }}
+          </div>
         </div>
       </div>
 
