--- a/src/scss/06_components/pages/_service.scss
+++ b/src/scss/06_components/pages/_service.scss
@@ -63,8 +63,6 @@ $teaser-icon-size-desktop: 48px;
     }
 
     &:hover {
-      text-decoration: underline;
-
       .hel-icon {
         margin-left: $spacing;
 
@@ -109,6 +107,7 @@ $teaser-icon-size-desktop: 48px;
     margin-top: $spacing-double;
     padding: 0 $spacing-and-half $spacing-double;
     position: relative;
+    text-decoration: none;
     width: 100%;
 
     @include breakpoint($breakpoint-m) {
@@ -118,7 +117,18 @@ $teaser-icon-size-desktop: 48px;
       margin-top: 0;
       padding: $spacing-double;
     }
+    .service__title {
+      @include font('special.card_title');
+      margin-bottom: $spacing-quarter;
+      margin-top: 0;
+      padding-right: $spacing-and-half;
 
+      @include breakpoint($breakpoint-m) {
+        margin-bottom: 0;
+        padding-right: 0;
+        width: 100%;
+      }
+    }
     .service__content {
       align-content: flex-start;
 
@@ -126,6 +136,24 @@ $teaser-icon-size-desktop: 48px;
         display: flex;
         flex-wrap: wrap;
         //max-width: 530px;
+      }
+      .channels {
+        ul {
+          list-style: none;
+          margin: 0;
+          padding: 0;
+        }
+        li {
+          background-color: rgb(222, 223, 225);
+          border-radius: 16px;
+          display: inline-block;
+          padding: 8px 6px;
+          //height: 32px;
+          //width: 67px;
+          & + li {
+            margin-left: 8px;
+          }
+        }
       }
     }
     .service__read-more {
@@ -137,43 +165,53 @@ $teaser-icon-size-desktop: 48px;
         //margin-top: $spacing;
       }
 
+      .hel-icon {
+        --icon-size: #{$teaser-icon-size-mobile};
+        //bottom: 50%;
+        //left: auto;
+        //position: absolute;
+        margin-right: $spacing;
+        transition: all 0.3s;
+        @media (prefers-reduced-motion) {
+          transition: none;
+        }
+
+        @include breakpoint($breakpoint-l) {
+          --icon-size: #{ $teaser-icon-size-desktop};
+          //margin-top: $spacing-and-half;
+          //position: static;
+          //right: auto;
+          //transform: none;
+        }
+      }
+
       //.hel-icon {
       //  @include hover-link-arrow-transition();
       //  margin-left: $spacing-half;
       //}
     }
 
+
+
     &:hover {
-      text-decoration: underline;
+      text-decoration: none;
+      .service__title {
+        text-decoration: underline;
+      }
 
-      .hel-icon {
-        margin-left: $spacing;
-
-        @media (prefers-reduced-motion) {
-          margin-left: 0;
+      .service__read-more {
+        .hel-icon {
+          transform: translateX($spacing);
+          @media (prefers-reduced-motion) {
+            transform: none;
+          }
+          //margin-left: $spacing;
+          //
+          //@media (prefers-reduced-motion) {
+          //  margin-left: 0;
+          //}
         }
       }
-    }
-  }
-  .hel-icon {
-    --icon-size: #{$teaser-icon-size-mobile};
-    bottom: 50%;
-    left: auto;
-    position: absolute;
-    right: $spacing;
-    transform: translateY(50%);
-    transition: all 0.3s;
-
-    @media (prefers-reduced-motion) {
-      transition: none;
-    }
-
-    @include breakpoint($breakpoint-l) {
-      --icon-size: #{ $teaser-icon-size-desktop};
-      margin-top: $spacing-and-half;
-      position: static;
-      right: auto;
-      transform: none;
     }
   }
 
