--- a/src/scss/06_components/pages/_service.scss
+++ b/src/scss/06_components/pages/_service.scss
@@ -118,6 +118,10 @@ $teaser-icon-size-desktop: 48px;
       padding: $spacing-double;
     }
     .service__title {
+
+      font-style: normal;
+      font-weight: $font-weight-medium;
+
       @include font('special.card_title');
       margin-bottom: $spacing-quarter;
       margin-top: 0;
@@ -127,10 +131,20 @@ $teaser-icon-size-desktop: 48px;
         margin-bottom: 0;
         padding-right: 0;
         width: 100%;
+        font-size: 26px;
+      }
+      @include breakpoint($breakpoint-l) {
+        font-size: 34px;
       }
     }
     .service__content {
       align-content: flex-start;
+
+      .short-desc {
+        font-size:16px;
+        font-style: normal;
+        font-weight: $font-weight-regular;
+      }
 
       @include breakpoint($breakpoint-m) {
         display: flex;
@@ -142,14 +156,16 @@ $teaser-icon-size-desktop: 48px;
           list-style: none;
           margin: 0;
           padding: 0;
+          margin-bottom: 10px;
         }
         li {
           background-color: rgb(222, 223, 225);
-          border-radius: 16px;
+          border-radius: 25px;
           display: inline-block;
-          padding: 8px 6px;
-          //height: 32px;
-          //width: 67px;
+          padding: 8px 16px;
+          font-style: normal;
+          font-weight: 500;
+          font-size: 14px;
           & + li {
             margin-left: 8px;
           }
@@ -158,18 +174,13 @@ $teaser-icon-size-desktop: 48px;
     }
     .service__read-more {
       display: flex;
-      //margin-top: $spacing-double;
 
       @include breakpoint($breakpoint-m) {
         justify-content: flex-end;
-        //margin-top: $spacing;
       }
 
       .hel-icon {
         --icon-size: #{$teaser-icon-size-mobile};
-        //bottom: 50%;
-        //left: auto;
-        //position: absolute;
         margin-right: $spacing;
         transition: all 0.3s;
         @media (prefers-reduced-motion) {
@@ -178,20 +189,10 @@ $teaser-icon-size-desktop: 48px;
 
         @include breakpoint($breakpoint-l) {
           --icon-size: #{ $teaser-icon-size-desktop};
-          //margin-top: $spacing-and-half;
-          //position: static;
-          //right: auto;
-          //transform: none;
+          margin-top: $spacing-and-half;
         }
       }
-
-      //.hel-icon {
-      //  @include hover-link-arrow-transition();
-      //  margin-left: $spacing-half;
-      //}
     }
-
-
 
     &:hover {
       text-decoration: none;
@@ -205,11 +206,6 @@ $teaser-icon-size-desktop: 48px;
           @media (prefers-reduced-motion) {
             transform: none;
           }
-          //margin-left: $spacing;
-          //
-          //@media (prefers-reduced-motion) {
-          //  margin-left: 0;
-          //}
         }
       }
     }
