--- a/src/scss/06_components/paragraphs/_service-list.scss
+++ b/src/scss/06_components/paragraphs/_service-list.scss
@@ -8,6 +8,10 @@
   }
 
   .views-exposed-form {
+
+    border-bottom: 1px solid $color-black-10;
+    padding-bottom: 72px;
+
     @include breakpoint($breakpoint-m) {
       align-items: flex-end;
       display: flex;
@@ -44,6 +48,10 @@
   }
 
   .service-list__count-container {
+
+    margin-top: 45px;
+    margin-bottom: 30px;
+
     @include font('lead');
     display: block;
     width: 100%;
@@ -91,16 +99,9 @@
   }
 
   .services-search__results {
-    border-top: 1px solid $color-black-10;
-    display: block;
-    margin-top: $spacing-double;
-    padding-top: $spacing-double;
-    width: 100%;
 
-    @include breakpoint($breakpoint-m) {
-      margin-top: $spacing-quadruple;
-      padding-top: $spacing-quadruple;
-    }
+    display: block;
+    width: 100%;
 
     > .views-row + .views-row {
       margin-top: $spacing;
