--- a/src/scss/06_components/pages/_service.scss
+++ b/src/scss/06_components/pages/_service.scss
@@ -157,6 +157,7 @@ $teaser-icon-size-desktop: 48px;
           margin: 0;
           padding: 0;
           margin-bottom: 10px;
+          margin-top: 10px;
         }
         li {
           background-color: rgb(222, 223, 225);
